Relatives profile data save Change age to birhtday

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -473,5 +473,6 @@
     <string name="discard_text">বাতিল করুন</string>
     <string name="bangladesh">বাংলাদেশ</string>
     <string name="abroad">বিদেশে</string>
+    <string name="birthday">জন্ম তারিখ</string>
 
 </resources>
